<resources>
    <string name="movie">Movie</string>
    <string name="tvShow">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="no_data">Tidak ada data</string>
    <string name="title_favorite">Favorite</string>

</resources>