...
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:src="?attr/colorSecondary"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_fav_movie"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end|bottom"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:layout_margin="15dp"
                android:background="@drawable/ic_baseline_circle_24"
...
